--- a/exploratory_visualization.Rmd
+++ b/exploratory_visualization.Rmd
@@ -5,9 +5,6 @@ date: "7/16/2020"
 output: html_document
 ---
 
-Goals:
-
-
 # Preliminaries
 
 ```{r}  
@@ -28,15 +25,16 @@ datasets <- read_csv(here::here("data/processed-data/datasets.csv"))
 Merge data
 
 ```{r}
-#note that this doesn't include anyone who *only* has KL data
-#looks like we have an NA dataset, not sure why that might be
-
-all_data <- left_join(trials, subjects) %>%
-  left_join(datasets) %>%
-  distinct(dataset_id, trial_id, subject_id, Query, 
-           Response, language, age_months, KL, lab, method, cite) %>% #some weird duplication, fix this
-  mutate(Response = ifelse(Response > 10, 10, as.numeric(Response)))
-
+##to-do: confirm no data loss
+all_data <- full_join(subjects, trials) %>%
+  left_join(datasets)%>%
+  mutate(Response = ifelse(Response > 10, 10, as.numeric(Response)), 
+         KL = ifelse(KL == "Non", "0", 
+                     ifelse(KL == "4K", "4",
+                            ifelse(KL == "5K", "5", 
+                                   ifelse(KL == "X", NA, as.character(KL))))), 
+         language = ifelse(str_detect(language, "English"), "English", as.character(language)))
+  
 ```
 
 # Plots
@@ -57,6 +55,7 @@ What knower-levels do we have?
 ```{r}
 all_data %>%
   group_by(dataset_id, subject_id) %>%
+  filter(!is.na(KL))%>% ##some datasets don't come with KLs, we will assign
   summarise(KL = KL[1]) %>%
   ggplot(aes(x = KL)) + 
   geom_histogram(stat = "count") + 
@@ -65,12 +64,72 @@ all_data %>%
 
 Responses given for quantities
 By age (mos)
+```{r}
+all_data %>%
+  filter(!is.na(Query), 
+         Response != 0)%>%
+  mutate(age_group = cut(age_months, breaks = seq(22, 144, 6), include.lowest = TRUE))%>%
+  ggplot(aes(x = Response, fill = age_group)) + 
+      geom_histogram(binwidth = 1, color = 'black') + 
+      scale_x_continuous(breaks = seq(1, 10, 1)) + 
+      scale_fill_solarized() +
+      labs(y = "Frequency", x = "Number given")+
+      facet_wrap(~Query)
+```
+
 By KL (allow for different levels of classification)
+```{r}
+all_data %>%
+  filter(!is.na(Query), 
+         !is.na(KL), 
+         Response != 0)%>%
+  ggplot(aes(x = Response, fill = KL)) + 
+      geom_histogram(binwidth = 1, color = 'black') + 
+      scale_x_continuous(breaks = seq(1, 10, 1)) + 
+      scale_fill_solarized() +
+      labs(y = "Frequency", x = "Number given")+
+      facet_wrap(~Query)
+```
+
 By method (titrated vs. non-titrated)
+```{r}
+all_data %>%
+  filter(!is.na(Query), 
+         Response != 0)%>%
+  ggplot(aes(x = Response, fill = method)) + 
+      geom_histogram(binwidth = 1, color = 'black') + 
+      scale_x_continuous(breaks = seq(1, 10, 1)) + 
+      scale_fill_solarized() +
+      labs(y = "Frequency", x = "Number given")+
+      facet_wrap(~Query)
+```
 By language
+```{r}
+
+```
 By dataset
 
 Age at which KL achieved
+```{r}
+all_data %>%
+  filter(!is.na(KL), 
+         !is.na(age_months))%>%
+  distinct(dataset_id, subject_id, KL, age_months)%>%
+  ggplot(aes(x = KL, y=age_months, color = KL, group = KL))+
+  geom_boxplot() +
+  coord_flip()
+```
+
+By language
+```{r}
+all_data %>%
+  filter(!is.na(KL), 
+         !is.na(age_months))%>%
+  distinct(dataset_id, subject_id, KL, age_months, language)%>%
+  ggplot(aes(x = language, y=age_months, color = KL))+
+  geom_boxplot() +
+  coord_flip()
+```
 By method
 By language
 By dataset
